[metadata]
name = tol
version = 0.0.10
description = tøl n1 (norrønt tól 'reiskap') kollektivt: (små)saker
long_description = file: README.rst
author = Øystein S. Haaland
author_email = oystein@beat.no
url = https://github.com/beat-no/tol

[options]
packages =
    tol

[bumpversion]
current_version = 0.0.10
commit = True
tag = True

[bumpversion:file:setup.cfg]
