[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
name = tol
version = 0.0.10
description = tøl n1 (norrønt tól 'reiskap') kollektivt: (små)saker
long_description = file: README.rst
author = Øystein S. Haaland
author_email = oystein@beat.no
url = https://github.com/beat-no/tol

[options]
packages = 
	tol

[bumpversion:file:setup.cfg]
